# Sony-SDK-MACOS-API

./: .gitignore  README.md
app/: CameraDevice.cpp  CameraDevice.h  ConnectionInfo.cpp  CrDebugString.cpp  CrDebugString.h  MessageDefine.h  OpenCVWrapper.cpp  RemoteCli.cpp
app/CRSDK/: CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h
cmake/: enum_cli_src.cmake
simpleCli/: CMakeLists.txt  CMakePresets.json  README.md
simpleCli/app/: ContentsTransferMode.cpp  CreateCameraObjectInfo.cpp  CustomGridLine.cpp  Eframing.cpp  FTPServerSetting.cpp  RemoteTransferMode.cpp  afShooting.cpp  connect.cpp  connectMulti.cpp  controlFTPJob.cpp  downloadUploadSettingFile.cpp  fx30MultiRecord.cpp  getLensInformation.cpp  getLiveViewAndOSD.cpp  getLiveViewAndOSDhttp.cpp  getSetDeviceProperty.cpp  getSetDevicePropertyStr.cpp  monitoring.cpp  reqOperation.cpp
simpleCli/app/CRSDK/: CameraRemote_SDK.h  CrControlCode.h  CrOperationCode.h  IDeviceCallback.h
